@@ -9,9 +9,12 @@ import java.util.Map;
 
 import javax.swing.Icon;
 import javax.swing.ImageIcon;
+import javax.swing.filechooser.FileSystemView;
 
 import org.apache.commons.logging.Log;
 import org.apache.commons.logging.LogFactory;
+
+import sun.awt.shell.ShellFolder;
 
 /**
  * Icon Factory
@@ -35,6 +38,7 @@ public class IconFactory {
         try {
             //initialize icons
             icons.put("drive",  new ImageIcon(ClassLoader.getSystemClassLoader().getResource("icons/hdd24.png")));
+            icons.put("floppy",  new ImageIcon(ClassLoader.getSystemClassLoader().getResource("icons/fdd24.png")));
             icons.put("folder", new ImageIcon(ClassLoader.getSystemClassLoader().getResource("icons/folder24.png")));
             icons.put("folder.open", new ImageIcon(ClassLoader.getSystemClassLoader().getResource("icons/folder.open.24.png")));
             icons.put("file",   new ImageIcon(ClassLoader.getSystemClassLoader().getResource("icons/file24.png")));
@@ -77,13 +81,33 @@ public class IconFactory {
      * @return icon
      */
     public static Icon getIcon(final File file) {
-        if (file.isFile()) {
+        if (ShellFolder.isFileSystemRoot(file)) {
+            if (FileSystemView.getFileSystemView().isFloppyDrive(file)) {
+                return getIcon("floppy");
+            }
+            return getIcon("drive");
+        } else if (file.isFile()) {
             return getIcon("file");
         } else if (file.isDirectory()) {
             return getIcon("folder");
         } else {
             return getIcon("unknown");
         }
+    }
+    
+    /**
+     * Gets large file system icon for any file
+     * 
+     * @param file source
+     * @return icon
+     */
+    public static Icon getFileSystemIcon(final File file) {
+        try {
+            return new ImageIcon(ShellFolder.getShellFolder(file).getIcon(true));
+        } catch (final Exception e) {
+            log.warn("Could not get system icon for file: " + file.getName());
+        }
+        return null;
     }
     
     /**
